--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@types/react": "19.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15"
   }
