--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "vercel": "^39.2.2"
   },
   "devDependencies": {
     "@types/react": "19.0.2",
